# prototypes

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
projects/networking/network-handler/: Cargo.toml
projects/networking/network-handler/src/: connection.rs  main.rs
projects/networking/protocol/: Cargo.toml
projects/networking/protocol/protocol-lib/: Cargo.toml
projects/networking/protocol/protocol-lib-derive/: Cargo.toml
projects/networking/protocol/protocol-lib-derive/src/: decode.rs  encode.rs  lib.rs  packet.rs  utils.rs
projects/networking/protocol/protocol-lib/src/: lib.rs  packet_frame.rs
projects/networking/protocol/protocol-lib/src/packets/: mod.rs  slp_handshake.rs
projects/networking/protocol/protocol-lib/src/packets/types/: mod.rs  packet_container.rs  packet_side.rs  packet_state.rs  var_int.rs  var_long.rs  var_numbers.rs
projects/networking/protocol/protocol-lib/src/types/: codec.rs  errors.rs  mod.rs  str.rs
projects/networking/protocol/protocol-server/: Cargo.toml
projects/networking/protocol/protocol-server/src/: main.rs
projects/networking/protocol/protocol-server/src/internal/: connection.rs  server.rs
projects/networking/slp/: Cargo.toml
projects/networking/slp-01/src/: lib.rs  main.rs
projects/networking/slp/src/: lib.rs  main.rs  status.json
projects/networking/slp/src/types/: mod.rs  vars.rs
