[package]
name = "protocol-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
derive_more = "0.99"
protocol-lib-derive = { path = "../protocol-lib-derive" }
anyhow = "1"
bytes = "1"
thiserror = "1"

[lib]
name = "protocol_lib"
path = "src/lib.rs"
